First JS workshop lesson

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ависалес</title>
+    <title>Aviasales</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <h1>Авиасалес</h1>
+    <h1>Aviasales</h1>
     <main>
       <section class="wrapper">
         <form class="form-search">
           <div class="wrapper__search">
-            <div class="input" style="display: block;">
+            <div class="input" style="display: block; z-index: 10;">
               <label
                 >Откуда
                 <input type="text" class="input__cities-from" required />
@@ -55,6 +55,8 @@
 			</section> -->
       </section>
     </main>
+
+    <script src="./script.js"></script>
   </body>
 </html>
 
